# manga-translator-app

./: README.md
.next/: trace
.next/cache/: .rscinfo
.next/server/: server-reference-manifest.json  webpack-runtime.js
.next/server/app/: page.js  page_client-reference-manifest.js
.next/server/vendor-chunks/: @floating-ui.js  @radix-ui.js  @swc.js  aria-hidden.js  attr-accept.js  class-variance-authority.js  clsx.js  file-selector.js  get-nonce.js  lucide-react.js  next.js  object-assign.js  prop-types.js  react-is.js  (+8 more)
api_server/: pyproject.toml
api_server/api/: Dockerfile  app.py  pyproject.toml
api_server/api/routes/: main.py  test.py
api_server/api/shared/: redis_client.py
backend/: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  worker.py
backend/load_tester/: README.md  locust.conf
backend/load_tester/config/: test_config.py
backend/load_tester/locustfiles/: locustfile.py
backend/models/: anime-manga-big-lama.pt  comic-text-segmenter.yaml  detect_bubble.yaml  pt_to_safetensors.py  pt_yaml_extract.py
backend/process/: inpaint.py  main.py  test.py  text_extraction.py  text_render.py  translator.py
backend/process/utils/: inpainting.py
backend/routes/: api.py  hello.py  test.py
components/: header.tsx  language-selector.tsx  processing-status.tsx  results-display.tsx
frontend/: constants.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: background.tsx  feature-cards.tsx  header.tsx  language-selector.tsx  processing-status.tsx  results-display.tsx  upload-section.tsx
frontend/types/: vanta.d.ts
load_tester/config/: test_config.py
load_tester/data/: sample_manga.json
load_tester/locustfiles/: locust_q_only.py  locust_queue.py  locust_simple.py
load_tester/utils/: helpers.py
worker/: .gitignore  Dockerfile  pyproject.toml  worker.py
worker/fonts/: fonts.md
worker/output/: translated_test_data.json
worker/process/: inpaint.py  main.py  test.py
worker/utils/: languages.json
(+17 files in other folders)
