[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Kevin",email = "kevin31422005@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.1,<4.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
flask = "^3.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
